server/.happypack/s--1870061660
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/components/Map.js: Unexpected token (5:0)

[0m [90m 3 | [39m[36mclass[39m 
 [90m 4 | [39m
[31m[1m>[22m[39m[90m 5 | [39m[36mexport[39m [36mdefault[39m [36mclass[39m [33mMap[39m [36mextends[39m [33mComponent[39m{
 [90m   | [39m[31m[1m^[22m[39m
 [90m 6 | [39m    constructor(props){
 [90m 7 | [39m        [36msuper[39m(props)[33m;[39m
 [90m 8 | [39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/components/Map.js: Unexpected token (5:0)

[0m [90m 3 | [39m[36mclass[39m 
 [90m 4 | [39m
[31m[1m>[22m[39m[90m 5 | [39m[36mexport[39m [36mdefault[39m [36mclass[39m [33mMap[39m [36mextends[39m [33mComponent[39m{
 [90m   | [39m[31m[1m^[22m[39m
 [90m 6 | [39m    constructor(props){
 [90m 7 | [39m        [36msuper[39m(props)[33m;[39m
 [90m 8 | [39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)